<resources>
    <string name="app_name">UBs Chat</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="thinking">Hãy viết suy nghĩ của bạn...</string>
    <string name="account">Chưa có tài khoản? Đăng ký ngay</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm password</string>
    <string name="register">Register</string>
</resources>